Fix first section padding on firefox

--- a/app/index/style.scss
+++ b/app/index/style.scss
@@ -93,7 +93,7 @@
         }
 
         .section-item {
-            margin-bottom: 10%;
+            margin-bottom: 128px;
             @media (max-width: 1000px) {
                 margin-bottom: 0;
             }
